<resources>
    <string name="app_name">Panorama</string>
    <string name="taking_picture_mode">Taking picture mode:</string>
    <string name="full_auto">Full Auto</string>
    <string name="manual">Manual</string>
    <string name="type_of_picture">Select application mode:</string>
    <string name="panorama">Panorama</string>
    <string name="multithreaded">Multithreaded</string>
    <string name="wide_picture">Wide picture</string>
    <string name="picture_360">Picture 360</string>
    <string name="save_destination">Save destination:</string>
    <string name="settings">Settings:</string>
    <string name="picture_settings">Picture settings:</string>
    <string name="high_quality">High quality</string>
    <string name="low_quality">Normal quality</string>
    <string name="very_low_quality">Low quality</string>
    <string name="smart_auto">Smart Auto</string>
    <string name="msg_exit">Press once again to exit</string>
    <string name="msg_delete_main_folder">PanoramaApp external folder cleared</string>
    <string name="msg_wait">Please wait for process to finish</string>
    <string name="msg_take_picture_not_allowed">You can\'t take picture here!</string>
    <string name="msg_do_not_move">please don\'t move</string>
    <string name="msg_open_gallery">Open gallery</string>
    <string name="msg_save">Saving panorama…</string>
    <string name="msg_go_to_settings">Go to settings and enable permissions</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_rw_perms_required"><![CDATA[Camera and Read&Write Services Permissions are required for this app]]></string>
    <string name="msg_is_saved">Picture saved:</string>
    <string name="part_msg_is_saved">Part picture saved:</string>
    <string name="stitching_in_progress">Stitching progress: </string>
    <string name="stitching_part_in_progress">Stitching part progress: </string>
    <string name="msg_press_save_for_compute_test_images">Press save button to process test images</string>
    <string name="msg_process_test_images">Processing test images</string>
    <string name="stitcher_settings">Advanced stitcher settings:</string>
    <string name="exposure_composition_type">Exposure composition type:</string>
    <string name="seam_finder_type">Seam finder type:</string>
    <string name="wrap_type">Wrap type:</string>
    <string name="detector_type">Detector type:</string>
    <string name="test">From /test folder</string>
</resources>
