<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="false"
        tools:openDrawer="start">

    <include
            layout="@layout/camera_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    <android.support.design.widget.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
    >

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/settings"
                        android:textStyle="bold"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/taking_picture_mode"/>

                <Switch
                        android:id="@+id/mode_auto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:padding="10dp"
                        android:text="@string/full_auto"/>


                <Switch
                        android:id="@+id/mode_manual"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:padding="10dp"
                        android:text="@string/manual"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/stitcher_settings" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:textSize="10sp"
                    android:text="@string/detector_type" />
                <Spinner
                        android:id="@+id/detector_select"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:padding="10dp"
                />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:textSize="10sp"
                    android:text="@string/wrap_type" />
                <Spinner
                        android:id="@+id/wrap_select"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:padding="10dp"
                />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:textSize="10sp"
                    android:text="@string/seam_finder_type" />
                <Spinner
                        android:id="@+id/seam_select"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                    android:padding="10dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:textSize="10sp"
                    android:text="@string/exposure_composition_type" />

                <Spinner
                    android:id="@+id/exp_comp_select"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:padding="10dp" />
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/type_of_picture"/>
                <Spinner
                        android:id="@+id/picture_mode"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:padding="10dp"
                />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/save_destination"/>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                    <ImageView
                            android:id="@+id/delete_folder"
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_margin="10dp"
                            android:padding="5dp"
                            android:src="@drawable/garbage"
                    />
                    <TextView
                            android:id="@+id/save_dir"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:textStyle="italic"/>

                </LinearLayout>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/picture_settings"/>

                <Switch
                        android:id="@+id/quality_high"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:padding="10dp"
                        android:text="@string/high_quality"/>

                <Switch
                        android:id="@+id/quality_low"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:padding="10dp"
                        android:text="@string/low_quality"/>

                <Switch
                        android:id="@+id/quality_very_low"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:padding="10dp"
                        android:text="@string/very_low_quality"/>
            </LinearLayout>
        </ScrollView>
    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>
